@@ -1,19 +1,14 @@
 package com.nexcart.backend.controller;
 
-import com.nexcart.backend.dto.ProductRequest;
 import com.nexcart.backend.dto.ProductResponse;
 import com.nexcart.backend.entity.Product;
 import com.nexcart.backend.service.ProductService;
 
-import jakarta.validation.Valid;
-
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/products")
@@ -25,42 +20,26 @@ public class ProductController {
         this.productService = productService;
     }
 
-    // =========================
-    // CREATE PRODUCT
-    // =========================
-
-    @PostMapping
-    public ResponseEntity<ProductResponse> createProduct(
-            @Valid @RequestBody ProductRequest request
-    ) {
-
-        Product product =
-                productService.createProduct(request);
-
-        return ResponseEntity
-                .status(HttpStatus.CREATED)
-                .body(ProductResponse.fromProduct(product));
-    }
-
-    // =========================
-    // GET ALL PRODUCTS
-    // =========================
+    // =====================================================
+    // GET ALL ACTIVE PRODUCTS
+    // =====================================================
 
     @GetMapping
     public ResponseEntity<List<ProductResponse>> getAllProducts() {
 
         List<ProductResponse> products =
-                productService.getAllProducts()
+                productService
+                        .getAllProducts()
                         .stream()
                         .map(ProductResponse::fromProduct)
-                        .collect(Collectors.toList());
+                        .toList();
 
         return ResponseEntity.ok(products);
     }
 
-    // =========================
+    // =====================================================
     // GET PRODUCT BY ID
-    // =========================
+    // =====================================================
 
     @GetMapping("/{id}")
     public ResponseEntity<ProductResponse> getProductById(
@@ -75,9 +54,9 @@ public class ProductController {
         );
     }
 
-    // =========================
+    // =====================================================
     // SEARCH PRODUCTS
-    // =========================
+    // =====================================================
 
     @GetMapping("/search")
     public ResponseEntity<List<ProductResponse>> searchProducts(
@@ -85,17 +64,18 @@ public class ProductController {
     ) {
 
         List<ProductResponse> products =
-                productService.searchProducts(name)
+                productService
+                        .searchProducts(name)
                         .stream()
                         .map(ProductResponse::fromProduct)
-                        .collect(Collectors.toList());
+                        .toList();
 
         return ResponseEntity.ok(products);
     }
 
-    // =========================
+    // =====================================================
     // PRODUCTS BY CATEGORY
-    // =========================
+    // =====================================================
 
     @GetMapping("/category/{category}")
     public ResponseEntity<List<ProductResponse>> getProductsByCategory(
@@ -103,43 +83,12 @@ public class ProductController {
     ) {
 
         List<ProductResponse> products =
-                productService.getProductsByCategory(category)
+                productService
+                        .getProductsByCategory(category)
                         .stream()
                         .map(ProductResponse::fromProduct)
-                        .collect(Collectors.toList());
+                        .toList();
 
         return ResponseEntity.ok(products);
-    }
-
-    // =========================
-    // UPDATE PRODUCT
-    // =========================
-
-    @PutMapping("/{id}")
-    public ResponseEntity<ProductResponse> updateProduct(
-            @PathVariable UUID id,
-            @Valid @RequestBody ProductRequest request
-    ) {
-
-        Product product =
-                productService.updateProduct(id, request);
-
-        return ResponseEntity.ok(
-                ProductResponse.fromProduct(product)
-        );
-    }
-
-    // =========================
-    // DELETE PRODUCT
-    // =========================
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteProduct(
-            @PathVariable UUID id
-    ) {
-
-        productService.deleteProduct(id);
-
-        return ResponseEntity.noContent().build();
     }
 }
